7.46+2
  * New linux locks, simulate load-acquire write release behaviour more
    closely.
7.46
  * C better lock integration. NB: POSIX locks used by litmus.
  * herd: correct PR #3 [semantics of C11 CAS]
  * linux: complete (?) implementation of atomic.h
  * tools, add -int32 <bool> command-line option.
  * gen Arch64, for -ua 0, now emit a LDXR/STXR pair and observe result
   register of STXR.
  * herd, global behaviour for 'show' instruction (no purge of state show component at procedure return)
  * Add AArch64 instruction csel
7.45
  * New ARMv8 model
  * klitmus tool
7.44
  * herd: add atomic_compare_exchange_..._explicit in C parser.
  * Suppress " in mcond output.
7.43+3
  * gen/litmus/herd: add ARMv8 LDAPR instruction (contribution by Will Deacon)
  * herd: cos-opt.cat, bug ! --> Do not redefine RMW
  * herd: PPC, avoid data or address dependencies from lwarx to matchin stwcx. 
7.43+2
 * Correct C semantics bug if (e) was understood as direct boolean 0/1 test.
   Now understood as if (e != 0), as it should.
7.43+1
 * New tool mlock
7.43
 * opam release
7.42+1
 * Add -cycles names option, to display cycles of failing checks.
 * Add support for C11 atomic_compare_exchange_... primitives.
7.42
 * Fix license, add README, publish as an OPAM package
 * gen: avoid pseudo-instruction li in generated tests.
 * tools: option -alloc <bool> for mprog [allocate symbolic registers].
 * herd: the match constructs also applies to relation.
 * Correct libdir definition for gen: same as herd, as it may parse bell
   files and  would thus include stdlib.cat
7.41
 * More opam
7.40
 * Opam build
7.39
 * herd: enable matching over event sets.
 * tools: add msethashes, for changing *test* hashes.
7.38
 * gen: list all global variables in init when type is non-default
 * new mselect: specify intervals for number of ins and number of threads.
 * Data dependencies are through registers only.
7.37
 * Add array access as a location, meaningfull only for litmus at present
7.36